# houtamelo_utils_gdnative

./: .gitignore  Cargo.toml
.history/src/: bounded_isize_20231107025609.rs  bounded_isize_20231107025918.rs
.trunk/: trunk.yaml
src/: any_matches_macro.rs  auto_text_resize.rs  bounded_isize.rs  bounded_u32.rs  clamp01.rs  connect_deferred.rs  disallow_click_focus.rs  disallow_spin_box_line_edit.rs  extensions.rs  godot_log_macros.rs  godot_panic.rs  good_cell.rs  hashset_macro.rs  inherits.rs  inspectors.rs  lib.rs  loading.rs  matches_macro.rs  node_utils.rs  to_shared_array.rs  tref_acquirer.rs  tref_unwrapper.rs
src/audio/: mod.rs  pitch_randomizer.rs  play_on_click.rs  play_on_hover.rs
src/bounded_ints/: mod.rs
src/bounded_ints/macros/: add.rs  div.rs  eq.rs  from.rs  main.rs  mod.rs  mul.rs  ord.rs  rem.rs  saturate_into.rs  sub.rs
src/inspectors/: instance.rs  manual.rs  mod.rs  option_impls.rs  option_ref_impls.rs  refcounted.rs
