[package]
name = "houtamelo_utils_gdnative"
version = "2.0.6"
authors = ["Houtamelo"]
edition = "2021"
description = "A collection of utilities shared between Houtamelo's GDNative projects."
license = "MIT"
repository = "https://github.com/Houtamelo/houtamelo_utils_gdnative"

[lib]
crate-type = ["lib"]

[dependencies]
gdnative = "0.11"
nameof = "1.2"
gdnative_export_node_as_path = "0.1"
rand = "0.8"
rand_xoshiro = "0.6"
util = { package = "houtamelo_utils", version = "2.0" }
anyhow = "1.0"
